<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#4190BE">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <TextView
                android:text="@string/tv1_name"
                android:id="@+id/textView"
                android:textSize="26sp"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/tvmargin"/>

            <Button
                android:text="@string/btn1_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:background="@color/btnColor"
                android:paddingBottom="@dimen/btnPadding"
                android:paddingTop="@dimen/btnPadding"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginBottom="@dimen/btnMarginBottom" />

            <Button
                android:text="@string/btn2_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:background="@color/btnColor"
                android:paddingBottom="@dimen/btnPadding"
                android:paddingTop="@dimen/btnPadding"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginBottom="@dimen/btnMarginBottom" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:text="@string/btn3_name"
                android:background="@color/btnColor"
                android:paddingBottom="@dimen/btnPadding"
                android:paddingTop="@dimen/btnPadding"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginBottom="@dimen/btnMarginBottom" />

            <Button
                android:text="@string/btn4_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:background="@color/btnColor"
                android:paddingBottom="@dimen/btnPadding"
                android:paddingTop="@dimen/btnPadding"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginBottom="@dimen/btnMarginBottom" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/button5"
                android:text="@string/btn5_name"
                android:background="@color/btnColor"
                android:paddingBottom="@dimen/btnPadding"
                android:paddingTop="@dimen/btnPadding"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginBottom="@dimen/btnMarginBottom" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/button6"
                android:text="@string/btn6_name"
                android:background="@color/myownapp"
                android:paddingBottom="@dimen/btnPadding"
                android:paddingTop="@dimen/btnPadding"
                android:layout_marginLeft="@dimen/marginLeft" />
        </LinearLayout>


    </ScrollView>

